# PassKeeper

./: .gitignore  CMakeLists.txt  Default_Button.ui.qml  DescElement.ui.qml  InputElement.ui.qml  Main.qml  PassSafer.cpp  PassSafer.h  README.md  icons.qrc  main.cpp
